fix cards gap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -70,3 +70,19 @@ a {
 .swiper-button-next::after, .swiper-button-prev::after {
   display: none;
 }
+
+.card {
+  gap: 0 28px;
+}
+
+@media screen and (max-width: 980px) {
+  .card {
+    gap: 0 36px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .card {
+    gap: 0 36px;
+  }
+}
